[package]
name = "central-limit-demo"
version = "0.1.0"
authors = ["Jarno Elonen <elonen@iki.fi>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/elonen/central-limit-demo"
description = "Interactive web demo for exploring Central Limit Theorem"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
meval = "0.2.0"
web-sys = { version = "0.3.4", features = [
	  'Document',
	  'Window',
	  'CanvasRenderingContext2d',
	  'HtmlCanvasElement',
	  'HtmlInputElement',
	  'TextMetrics'
	]}



[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
